--- a/replicaset-blue.yml
+++ b/replicaset-blue.yml
@@ -15,6 +15,10 @@ spec:
       containers:
       - name: blue-app
         image: yoonjeong/blue-app:1.0
+        resources:
+          limits:
+            memory: "64Mi"
+            cpu: "250m"
         ports:
         - containerPort: 8080
         env:
