--- a/myapp-deployment.yml
+++ b/myapp-deployment.yml
@@ -1,24 +1,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp-deployment
+  name: my-app
+  labels:
+    app: my-app
 spec:
-  replicas: 3
+  replicas: 5
   selector:
     matchLabels:
       app: my-app
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 2
   template:
     metadata:
       labels:
         app: my-app
     spec:
       containers:
-      - name: myapp
-        image: yoonjeong/my-app:1.0
-        resources:
-          limits:
-            memory: "32Mi"
-            cpu: "100m"
+      - name: my-app
+        image: yoonjeong/my-app:2.0
         ports:
         - containerPort: 8080
-    
+        resources:
+          limits:
+            memory: "64Mi"
+            cpu: "50m"
