AWS S3 tfstate 저장소, Lock용 DynamoDB tf 작성

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 eks-terraform/.terraform
 eks-terraform/.terraform*
+eks-terraform/terraform*
+eks-terraform/terraform.*
+eks-terraform/terraform.tfstate
+eks-terraform/terraform.tfstate.backup
+
+eks-terraformer/backend/.terraform
+eks-terraformer/backend/.terraform*
+eks-terraformer/backend/terraform*
+eks-terraformer/backend/terraform.*
