terraformer로 autoscaling_group을 받아와 해당 정보로 eks nodegroup 세팅에 추가 해줌

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ eks-terraformer/backend/.terraform
 eks-terraformer/backend/.terraform*
 eks-terraformer/backend/terraform*
 eks-terraformer/backend/terraform.*
+
+/eks-terraformer/terrafomer/.terraform
+/eks-terraformer/terrafomer/.terraform*
+/eks-terraformer/terrafomer/terraform.*
+/eks-terraformer/terrafomer/auto_scaling
