--- a/salgu/core/ingress.yml
+++ b/salgu/core/ingress.yml
@@ -23,10 +23,10 @@ spec:
 #            port:
 #              number: 18081
 
-#      - pathType: Prefix
-#        path: /api
-#        backend:
-#          service:
-#            name: api
-#            port:
-#              number: 18080
+      - pathType: Prefix
+        path: /api(/|$)(.*)   # (.*)을 통해 경로를 얻습니다.
+        backend:
+          service:
+            name: api
+            port:
+              number: 18080
