--- a/salgu/core/ingress.yml
+++ b/salgu/core/ingress.yml
@@ -9,6 +9,8 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$2  # path의 (.*)에서 획득한 경로를 전달.
     kubernetes.io/ingress.class: "nginx"
 spec:
+  tls:
+  - secretName: tls-secret
   rules:
   - http:
       paths:
@@ -22,7 +24,6 @@ spec:
 #            name: auth-headless-service
 #            port:
 #              number: 18081
-
       - pathType: Prefix
         path: /api(/|$)(.*)   # (.*)을 통해 경로를 얻습니다.
         backend:
