--- a/salgu/core/auth-headless-service.yml
+++ b/salgu/core/auth-headless-service.yml
@@ -1,8 +1,8 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: auth-headless-service
-  namespace: core
-spec:
-  clusterIP: None
-  externalName: auth.auth.svc.cluster.local
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: auth-headless-service
+#  namespace: core
+#spec:
+#  clusterIP: None
+#  externalName: auth.auth.svc.cluster.local
