--- a/salgu/payment/service.yml
+++ b/salgu/payment/service.yml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth
+  name: payment
   namespace: core
   labels:
-    app: auth
+    app: payment
 
 spec:
   type: NodePort
   selector:
-    app: auth
+    app: payment
   ports:
     - port: 18080
       targetPort: 18080
