add: #3 'api' Pod allow 'auth' Pod NetworkPolicy

--- a/salgu/api/api-allow-auth-networkpolicy.yml
+++ b/salgu/api/api-allow-auth-networkpolicy.yml
@@ -16,3 +16,6 @@ spec:
     - podSelector:
         matchLabels:
           app: auth
+    - podSelector:
+        matchLabels:
+          app: payment
