--- a/helmchart/auth/templates/salgu-auth.yaml
+++ b/helmchart/auth/templates/salgu-auth.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{.Values.name}}
+  name: {{.Chart.Name}}-{{.Release.Name}}
   namespace: {{.Values.namespace}}
   labels:
     app: {{.Values.name}}
@@ -38,7 +38,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{.Values.name}}
+  name: {{.Chart.Name}}-{{.Release.Name}}
   namespace: {{.Values.namespace}}
   labels:
     app: {{.Values.name}}
